2006-12-09  Paolo Maggi  <paolo@gnome.org>

	* plugins/taglist/HTML.tags.xml.in: added "sort" attribute to TagGroups,
	added a couple of missing elements.

	* plugins/taglist/Latex.tags.xml.in: 
	* plugins/taglist/XSLT.tags.xml.in: 
	* plugins/taglist/XUL.tags.xml.in: added "sort" attribute to TagGroup

	* plugins/taglist/gedit-taglist-plugin-panel.c (insert_tag)
	(tag_list_row_activated_cb) (tag_list_key_press_event_cb): move focus
	to document when double-clicking on a tag. Move focus also on 
	Ctrl + Return, but not on Return.

	* plugins/taglist/gedit-taglist-plugin-parser.c (tags_cmp)
	(parse_tag_group) (get_tag_group) (groups_cmp) (lookup_best_lang):
	sort the tags if needed, sort the tag groups.

2006-12-08  Paolo Maggi  <paolo@gnome.org>

	Fixes bug #155487 – make html tag list xhtml compliant
	Patch by Luis Menina <liberforce@fr.st>
	
	* plugins/taglist/HTML.tags.xml.in: New XHTML compliant TagGroup, 
	converted HTML to lowercase, removed in-tags spaces, removed a few 
	HTML nonstandard tags (ie. browser specific - we're not in stoneage
	anymore)

2006-12-08  Paolo Maggi  <paolo@gnome.org>

  	Fixes bug #344050 – XUL.tags file
	Patch by Pete Morgan <pm@daffodil.uk.com>
	
	* plugins/taglist/Makefile.am: distribute XUL taglist

	* plugins/taglist/XUL.tags.xml.in: new file

2006-12-08  Paolo Maggi  <paolo@gnome.org>

	* plugins/savecopy/*: bye bye savecopy plugin, you had a very short
	life (note that savecopy plugin was never ported to the new plugin
	architecture introduced with gedit 2.14)

2006-12-08  Paolo Maggi  <paolo@gnome.org>

	Fixes bug #353235 – Overloaded plural strings
	
	Patch by Theppitak Karoonboonyanan <thep@inux.thai.net>
	
	* gedit/dialogs/gedit-close-confirmation-dialog.c
	(get_text_secondary_label): manage the case with hours == 1 in the 
	right way

	* gedit/gedit-commands-file.c (revert_dialog): ditto

2006-12-07  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-history-entry.[ch] (gedit_history_entry_destroy)