@@ -1,5 +1,10 @@
 2006-12-09  Paolo Maggi  <paolo@gnome.org>
 
+	* plugins/taglist/gedit-taglist-plugin-panel.c: adds a preview area,
+	makes the tooltips working with combox box
+
+2006-12-09  Paolo Maggi  <paolo@gnome.org>
+
 	* plugins/taglist/HTML.tags.xml.in: added "sort" attribute to TagGroups,
 	added a couple of missing elements.
 
